infrastructure/jaeger/resources/authelia-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: authelia
spec:
  chain:
    middlewares:
      - name: authelia-forwardauth
        namespace: auth
