infrastructure/jaeger/resources/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jaeger-ui
spec:
  parentRefs:
    - name: traefik-intranet
      namespace: traefik
  hostnames:
    - jaeger.int.fivebytestudios.com
  rules:
    - backendRefs:
        - name: jaeger-collector-extension
          port: 16686
      filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: authelia
