infrastructure/jaeger/resources/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jaeger-ui
  labels:
    app.kubernetes.io/component: jaeger-ui
  annotations:
    cert-manager.io/cluster-issuer: intranet-dns01-prod
spec:
  tls:
    - hosts:
        - "from rules"
      secretName: "jaeger-tls"
  rules:
    - host: "jaeger.int.fivebytestudios.com"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: jaeger-collector-extension
                port:
                  name: jaeger-query
